# introduction_to_ras_11052022

./: slides.html
.github/workflows/: generate_and_deploy.yaml
slides/: CMakeLists.txt  slides.md
